src/objects/loan__Overdue_Fee__c.object
<CustomObject>
    <fields>
        <fullName>loan__Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee</label>
        <referenceTo>loan__Fee__c</referenceTo>
        <relationshipLabel>Overdue Fee</relationshipLabel>
        <relationshipName>Overdue_Fee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Overdue Fee</relationshipLabel>
        <relationshipName>Overdue_Fee</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Overdue_Amount__c</fullName>
        <label>Overdue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Overdue Fee</label>
    <nameField>
        <label>Overdue Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Overdue Fee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>